--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,15 +1,13 @@
 {
   "site": {
-    "title": "Astroplate",
+    "title": "ShinCode_Camp",
     "base_url": "https://astroplate.netlify.app",
     "base_path": "/",
     "trailing_slash": false,
     "favicon": "/images/favicon.png",
-    "logo": "/images/logo.png",
-    "logo_darkmode": "/images/logo-darkmode.png",
     "logo_width": "150",
     "logo_height": "30",
-    "logo_text": "Astroplate"
+    "logo_text": "ShinCode_Camp"
   },
 
   "settings": {
@@ -29,7 +27,7 @@
 
   "navigation_button": {
     "enable": true,
-    "label": "Get Started",
+    "label": "無料で始める",
     "link": "https://github.com/zeon-studio/astroplate"
   },
 
