--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "astro preview",
     "format": "prettier -w ./src",
     "generate-json": "node scripts/jsonGenerator.js",
-    "remove-darkmode": "node scripts/removeDarkmode.js && yarn format"
+    "remove-darkmode": "node scripts/removeDarkmode.js && yarn format",
+    "deploy": "npm run build && npx wrangler pages deploy dist"
   },
   "dependencies": {
     "@astrojs/mdx": "^2.0.2",
