--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,13 +1,13 @@
 {
   "site": {
-    "title": "ShinCode_Camp",
+    "title": "ShinCode",
     "base_url": "https://astroplate.netlify.app",
     "base_path": "/",
     "trailing_slash": false,
     "favicon": "/images/favicon.png",
     "logo_width": "150",
     "logo_height": "30",
-    "logo_text": "ShinCode_Camp"
+    "logo_text": "ShinCode"
   },
 
   "settings": {
