--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "site": {
     "title": "ShinCode_Camp",
-    "base_url": "https://astroplate.netlify.app",
+    "base_url": "https://shincode-hp.pages.dev",
     "base_path": "/",
     "trailing_slash": false,
     "favicon": "/images/favicon.png",
